citrix/https/https-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: apache-https
  namespace: citrix
  annotations:
    ingress.citrix.com/insecure-termination: redirect
    ingress.citrix.com/secure-backend: 'True'
    kubernetes.io/ingress.class: tier-1-vpx
spec:
  tls:
    - hosts:
        - apache.ocp.minguss.com
      secretName: apache-ssl
  rules:
    - host: apache.ocp.minguss.com
      http:
        paths:
          - path: /
            backend:
              serviceName: apache
              servicePort: 8080
status:
  loadBalancer: {}
